--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,7 @@ ipykernel = "^6.25.1"
 pytest = "^7.2.0"
 pexpect = "^4.8.0"
 papermill = "^2.4.0"
+ipykernel = "^6.25.1"
 
 [tool.poetry.group.pyinstaller.dependencies]
 pyinstaller = "^5.12"
