--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -224,7 +224,7 @@ jobs:
       - name: Test direct workflow submission within a Jupyter notebook (via papermill)
         run: |
           source $(poetry env info --path)/bin/activate
-          python -m ipykernel install --name python3
+          python -m ipykernel install --user --name python3
           papermill ./.github/workflows/test_direct_sub_jupyter_notebook.ipynb ./.github/workflows/test_direct_sub_jupyter_notebook_${{ runner.os }}.ipynb -p app_import_str hpcflow.app
 
       - name: Test invocation command with interactive python
@@ -318,7 +318,7 @@ jobs:
       - name: Test direct workflow submission within a Jupyter notebook (via papermill)
         run: |
           source $(poetry env info --path)/bin/activate
-          python -m ipykernel install --name python3
+          python -m ipykernel install --user --name python3
           papermill ./.github/workflows/test_direct_sub_jupyter_notebook.ipynb ./.github/workflows/test_direct_sub_jupyter_notebook_${{ runner.os }}.ipynb -p app_import_str hpcflow.app
 
       - name: Test invocation command with interactive python
@@ -419,6 +419,6 @@ jobs:
       - name: Test direct workflow submission within a Jupyter notebook (via papermill)
         run: |
           ."$(poetry env info --path)\Scripts\activate.ps1"
-          python -m ipykernel install --name python3
+          python -m ipykernel install --user --name python3
           papermill .\.github\workflows\test_direct_sub_jupyter_notebook.ipynb .\.github\workflows\test_direct_sub_jupyter_notebook_${{ runner.os }}.ipynb -p app_import_str hpcflow.app
   
