fix: change `schemas` arg in `Task` to singular `schema`, but store internally as a list

--- a/hpcflow/sdk/demo/data/workflow_1_slurm.yaml
+++ b/hpcflow/sdk/demo/data/workflow_1_slurm.yaml
@@ -3,6 +3,6 @@ resources:
   any:
     scheduler: slurm
 tasks:
-  - schemas: [test_t1_conditional_OS]
+  - schema: test_t1_conditional_OS
     inputs:
       p1: 101
