--- a/hpcflow/sdk/demo/workflows/workflow_1.yaml
+++ b/hpcflow/sdk/demo/workflows/workflow_1.yaml
@@ -1,5 +1,5 @@
 doc: Simple test workflow with single OS-agnostic task that prints to the shell's standard output stream.
 tasks:
-  - schemas: [test_t1_conditional_OS] # this schema works on both Windows and POSIX
+  - schema: test_t1_conditional_OS # this schema works on both Windows and POSIX
     inputs:
       p1: 101
