--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -254,11 +254,6 @@ jobs:
           echo $hpcflow_vers_expected
           [ "$hpcflow_vers" = "$hpcflow_vers_expected" ]
 
-      - name: Run test suite on the frozen app (file) [====temp disabled on Mac due to slow running====]
-        if: "!contains(matrix.os, 'macos')"
-        run: |
-          pyinstaller/dist/onefile/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}${{ matrix.executable_ext }} test
-
       - name: Run test suite on the frozen app (folder)
         run: |
           pyinstaller/dist/onedir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir/hpcflow-${{ needs.bump-version.outputs.new_tag_name }}-${{ matrix.executable_os }}-dir${{ matrix.executable_ext }} test
@@ -372,6 +367,8 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       binary_download_links: ${{ steps.get_binary_download_links.outputs.binary_download_links }}
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
         with:
