--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 packages = [
     { include = "hpcflow" }
 ]
+exclude = ["hpcflow/sdk/demo/workflow_data_files"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.13"
