--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -200,7 +200,7 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run python -m pytest --exitfirst --integration
+          poetry run hpcflow test --exitfirst --integration
 
   test-integration-CentOS:
     needs: pre-commit
@@ -235,7 +235,7 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run python -m pytest --exitfirst --integration
+          poetry run hpcflow test --exitfirst --integration
 
   test-invocation-ubuntu:
     if: github.event_name == 'pull_request' || github.event.inputs.invocation_tests == 'true'
