--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -119,7 +119,7 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run python -m pytest --exitfirst
+          poetry run python -m pytest 
 
   test-units-CentOS:
     needs: pre-commit
@@ -154,7 +154,7 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run python -m pytest --exitfirst
+          poetry run python -m pytest 
 
   test-integration:
     needs: pre-commit
@@ -200,7 +200,7 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run hpcflow test --exitfirst --integration
+          poetry run hpcflow test  --integration
 
   test-integration-CentOS:
     needs: pre-commit
@@ -235,7 +235,7 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run hpcflow test --exitfirst --integration
+          poetry run hpcflow test  --integration
 
   test-invocation-ubuntu:
     if: github.event_name == 'pull_request' || github.event.inputs.invocation_tests == 'true'
