fix: demo-data cache via GitHub filesystems in frozen app

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ aiohttp = "^3.8.4"
 rich = "^13.4.2"
 h5py = "^3.9.0"
 valida = "^0.7.2"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.12.2"
