--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -556,7 +556,7 @@ jobs:
       - name: Update doc version switcher
         run: |
           curl https://raw.githubusercontent.com/hpcflow/hpcflow-new/${{ github.ref_name }}/docs/make_vers_switcher.py --output docs/make_vers_switcher.py
-          python docs/make_vers_switcher.py
+          python docs/make_vers_switcher.py docs
 
       - name: Push changes
         run: |
