--- a/.gitignore
+++ b/.gitignore
@@ -150,6 +150,7 @@ docs/source/reference/_autosummary/
 # generated via conf.py
 docs/source/reference/_generated
 docs/source/reference/demo_workflow*
+docs/source/reference/ts_*.html
 docs/source/reference/api.rst
 
 *.pptx
