--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,14 @@ exclude = ["hpcflow/data/demo_data"]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.13"
-zarr = "^2.14.2"
+zarr = [
+    {version = "^2.16.1", python = "<3.9"},
+    {version = "^2.17.0", python = ">=3.9"}
+]
+numpy = [
+    {version = "^1.24.4", python = "<3.9"},
+    {version = "^1.26.4", python = ">=3.9"},
+]
 "ruamel.yaml" = "^0.17.20"
 colorama = "^0.4.6"
 termcolor = "^1.1.0"
