--- a/.github/workflows/vars.jsonc
+++ b/.github/workflows/vars.jsonc
@@ -18,6 +18,7 @@
     "PYPI_URL": "https://upload.pypi.org/legacy/", // "https://test.pypi.org/legacy/",
     "executable_name": "hpcflow",
     "pyinstaller_dir": "pyinstaller", // directory containing hooks and make.sh and make.ps1 scripts to invoke
+    "benchmark_make_workflow": "./hpcflow/tests/data/benchmark_N_elements.yaml", // used to benchmark the workflow make command
     "website_source_org": "hpcflow",
     "website_source_repo": "hpcflow.github.io",
     "website_source_token_name": "HPCFLOW_ACTIONS_TOKEN" // as defined within the `secrets` context: PAT of user who has push access and permission to bypass branch protection
