--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -429,7 +429,8 @@ jobs:
       - name: zip benchmark results
         run: |
           zip -r ./benchmarks.zip benchmarks
-      - uses: actions/upload-artifact@v3
+      - name: Upload benchmark results artifact
+        uses: actions/upload-artifact@v3
         with:             
           name: benchmarks.zip
           path: benchmarks.zip
