--- a/.github/workflows/build-exes.yml
+++ b/.github/workflows/build-exes.yml
@@ -140,7 +140,7 @@ jobs:
 
   build-macos-executables:
     if: github.event.inputs.build_macos == 'true'
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v3
         with:
@@ -154,7 +154,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./.venv
-          key: venv-build-macos-latest-${{ hashFiles('**/poetry.lock') }}
+          key: venv-build-macos-13-${{ hashFiles('**/poetry.lock') }}
 
       - name: Install poetry
         run: python -m pip install poetry==${{ env.POETRY_VERSION }}
