--- a/.github/workflows/build-exes.yml.in
+++ b/.github/workflows/build-exes.yml.in
@@ -140,7 +140,7 @@ jobs:
 
   build-macos-executables:
     if: github.event.inputs.build_macos == 'true'
-    runs-on: macos-latest
+    runs-on: macos-13
     steps:
       - uses: actions/checkout@v3
         with:
@@ -154,7 +154,7 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ./.venv
-          key: {% raw %}venv-build-macos-latest-${{ hashFiles('**/poetry.lock') }}{% endraw %}
+          key: {% raw %}venv-build-macos-13-${{ hashFiles('**/poetry.lock') }}{% endraw %}
 
       - name: Install poetry
         run: python -m pip install poetry=={% raw %}${{ env.POETRY_VERSION }}{% endraw %}
