--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -89,7 +89,7 @@ jobs:
           - "3.12"
         os:
           - ubuntu-latest
-          - macos-latest
+          - macos-13
           - windows-latest
 
     runs-on: ${{ matrix.os }}
@@ -171,7 +171,7 @@ jobs:
           - "3.12"
         os:
           - ubuntu-latest
-          - macos-latest
+          - macos-13
           - windows-latest
 
     runs-on: ${{ matrix.os }}
@@ -344,7 +344,7 @@ jobs:
 
   test-invocation-macos:
     if: github.event_name == 'pull_request' || github.event.inputs.invocation_tests == 'true'
-    runs-on: macos-latest
+    runs-on: macos-13
     strategy:
       fail-fast: false
       matrix:
