--- a/.github/workflows/test_pre_python.yml.in
+++ b/.github/workflows/test_pre_python.yml.in
@@ -18,7 +18,7 @@ jobs:
           - "3.13-dev"
         os:
           - ubuntu-latest
-          - macos-latest
+          - macos-13
           - windows-latest
 
     runs-on: {% raw %}${{ matrix.os }}{% endraw %}
