--- a/.github/workflows/release.yml.in
+++ b/.github/workflows/release.yml.in
@@ -474,7 +474,10 @@ jobs:
       - run: mkdir release-artifacts
 
       - uses: actions/download-artifact@v4
-        id: download_executables
+        with:
+          path: release-artifacts
+
+      - uses: actions/download-artifact@v3 # for CentOS (docker) build-exes
         with:
           path: release-artifacts
 
