--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -119,6 +119,8 @@ jobs:
           poetry install --without dev,pyinstaller
 
       - name: Run tests
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}          
         run: |
           poetry run python -m pytest 
 
